--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/anatoly-os/ofcpokerweb/issues"
   },
-  "homepage": "https://github.com/anatoly-os/ofcpokerweb#readme"
+  "homepage": "https://github.com/anatoly-os/ofcpokerweb#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
+  }
 }
